Fixed dropdowns in builds getting cut off. Added a space at the start of horizontally draggable containers so items aren't cut off when dragging. Fixed newer builds having the icons container on the side even without any icons. Added a slight style change to identity/ego icons on the home page and release history. Adjusted the deployment order number overlays. Reorganized homepage links

--- a/src/app/components/objects/DropdownButton.module.css
+++ b/src/app/components/objects/DropdownButton.module.css
@@ -9,8 +9,8 @@
 }
 
 .dropdownMenu {
-    position: absolute;
-    top: 100%;
+    position: fixed;
+    /* top: 100%; */
     background: var(--bg-secondary);
     border: 1px solid var(--secondary-border-color);
     border-radius: 4px;
